gtk+2.0 (2.6.10-2) unstable; urgency=medium
  [ Sebastien Bacher ]
  * Patch from Ubuntu update, thanks Martin Pitt.
  * SECURITY UPDATE: Arbitrary code execution and DoS.
  * Add debian/patches/010_xpm-colors-overflow_CVE-2005-3186.patch:
    - io-xpm.c: Add check to XPM reader to prevent integer overflow for
    specially crafted number of colors (Closes: #339431).
    - CVE-2005-3186
  * Add debian/patches/011_xpm-colors-loop_CVE-2005-2975.patch:
    - io-xpm.c: Fix endless loop with specially crafted number of colors.
    - CVE-2005-2975

  * debian/rules:
    - fix confusing cp usage.

  [ Loic Minier ]

  * Update FSF address. [debian/copyright]
  * Remove "Copyright:" line, the whole file expresses the copyright already.
    (Closes: #323209) [debian/copyright]
  * Backport patch from the 2.8 branch removing the warning introduced
    somewhere in 2.6 when length wraps in calculation in gdk_property_get.
    (Closes: #315083) [debian/patches/064_gdk-property-get-no-warning.patch]
  * Add ${misc:Depends} to all packages.
  * Remove libgtk2.0-0 dependency from libgtk2.0-common to break the circular
    dependency; cross your fingers, don't hold your breath. (Closes: #309437)

 -- Sebastien Bacher <seb128@debian.org>  Wed, 16 Nov 2005 16:56:39 +0100

--- a/debian/rules
+++ b/debian/rules
@@ -184,10 +184,10 @@ install: install-static install-shared
 	done
 
 	# for -doc
-	cp -a $(BUILD_SHARED_DIR)/docs/faq/html debian/libgtk$(apiver)-doc/usr/share/doc/libgtk$(apiver)-doc/gtk-faq/
+	cp -a $(BUILD_SHARED_DIR)/docs/faq/html debian/libgtk$(apiver)-doc/usr/share/doc/libgtk$(apiver)-doc/gtk-faq
 	cp -a $(CURDIR)/debian/gtk-faq.devhelp debian/libgtk$(apiver)-doc/usr/share/doc/libgtk$(apiver)-doc/gtk-faq/
 
-	cp -a $(BUILD_SHARED_DIR)/docs/tutorial/html debian/libgtk$(apiver)-doc/usr/share/doc/libgtk$(apiver)-doc/gtk-tutorial/
+	cp -a $(BUILD_SHARED_DIR)/docs/tutorial/html debian/libgtk$(apiver)-doc/usr/share/doc/libgtk$(apiver)-doc/gtk-tutorial
 	cp $(CURDIR)/debian/gtk-tutorial.devhelp debian/libgtk$(apiver)-doc/usr/share/doc/libgtk$(apiver)-doc/gtk-tutorial/
 
 	cp -ar $(BUILD_SHARED_DIR)/docs/tutorial/images debian/libgtk$(apiver)-doc/usr/share/doc/libgtk$(apiver)-doc/gtk-tutorial/
